    - A few basic recipe tweaks for 248k
  Changes:
    - General balance: Tungsten plates required for piercing ammunition reduced.
    - General balance: Tungsten ingredients required for oil refinery & chemical plant increased.
    - General balance: For some mod loadouts, steel no longer required for assembling machine 2
---------------------------------------------------------------------------------------------------
Version: 0.6.6
Date: 2021-08-02
  Changes:
    - Asteroid Mining support
---------------------------------------------------------------------------------------------------
Version: 0.6.5
Date: 2021-07-10
  Changes:
    - Support Double Furnace mod
  Localization:
    - ru locale updates thanks to Pergamum663
---------------------------------------------------------------------------------------------------
Version: 0.6.4
Date: 2021-07-03
  Fixes:
    - Prod modules for molten
---------------------------------------------------------------------------------------------------
Version: 0.6.3
Date: 2021-07-02
  Fixes:
    - SE K2 subgroup cleanup
---------------------------------------------------------------------------------------------------
Version: 0.6.2
Date: 2021-07-02
  Changes:
    - SE Update smelting unlock
---------------------------------------------------------------------------------------------------
Version: 0.6.1
Date: 2022-07-01
  Changes:
    - SE: minor tech tree tweaks
---------------------------------------------------------------------------------------------------
Version: 0.6.0
Date: 2022-07-01
  Changes:
    - Compatible with Space Exploration 0.6
---------------------------------------------------------------------------------------------------
Version: 0.5.8
Date: 2022-02-22
  Localization:
    - ko localization updates thanks to x2605
---------------------------------------------------------------------------------------------------
Version: 0.5.7
Date: 2022-02-12
  Localization: