@@ -8,6 +8,10 @@ Date: 2022-08-09
     - General balance: Tungsten plates required for piercing ammunition reduced.
     - General balance: Tungsten ingredients required for oil refinery & chemical plant increased.
     - General balance: For some mod loadouts, steel no longer required for assembling machine 2
+    - SE+K2 balance: When using Space Exploration 0.6 & Krastorio 2, speed modules are now removed
+      from rocket science (rocket tech cards), but many more rocket engine nozzles are used.
+      This slightly balances the jump in complexity from chemical to rocket science.
+      Speed modules are still used later in optimization science.
 ---------------------------------------------------------------------------------------------------
 Version: 0.6.6
 Date: 2021-08-02
